# lvv

./: .clang-format  CMakeLists.txt  Dockerfile.ci  LICENSE  README.md
.github/workflows/: ci.yml
docs/: api.md  architecture.md  getting-started.md  scripting-api.md  spy-protocol.md
example/: CMakeLists.txt  counter_with_spy.cpp  demo_with_spy.cpp  lv_conf.h
python/: lvv.py
spy/: lvv_headless.c  lvv_headless.h  lvv_spy.c  lvv_spy.h
src/: main.cpp
src/app/: app.cpp  app.hpp  app_commands.cpp  app_server.cpp  app_test_runner.cpp  config.cpp  config.hpp
src/core/: html_report.hpp  junit_xml.hpp  log.hpp  process_runner.cpp  process_runner.hpp  screen_capture.cpp  screen_capture.hpp  test_result.hpp  test_runner.cpp  test_runner.hpp  tree_snapshot.cpp  tree_snapshot.hpp  visual_regression.cpp  visual_regression.hpp  widget_tree.cpp  widget_tree.hpp
src/protocol/: commands.hpp  protocol.cpp  protocol.hpp
src/scripting/: lvv_module.cpp  lvv_module.hpp  script_engine.cpp  script_engine.hpp
src/server/: api_routes.cpp  api_routes.hpp  api_types.hpp  web_server.cpp  web_server.hpp  ws_handler.cpp  ws_handler.hpp
src/transport/: serial_transport.cpp  serial_transport.hpp  tcp_transport.cpp  tcp_transport.hpp  transport.hpp
tests/: setup.py  test_api_types.cpp  test_protocol.cpp  test_protocol_parse.cpp  test_screen_capture.cpp  test_selectors.cpp  test_tree_snapshot.cpp  test_visual_regression.cpp  test_widget_tree.cpp
tests/device_tests/: test_navigation.py
tests/example_tests/: test_determinism.py  test_dialog.py  test_gestures.py  test_list_scroll.py  test_login.py  test_navigation.py  test_recorded.py  test_retry_find.py  test_selectors.py  test_settings.py  test_tree_snapshot.py
web/: package-lock.json  package.json  vite.config.ts
web/src/: App.tsx
web/src/api/: client.ts  useHealthPoller.ts  useWebSocket.ts
web/src/components/: ConnectionPanel.tsx  ErrorBoundary.tsx  LiveView.tsx  PropertyPanel.tsx  SplitPane.tsx  TestEditor.tsx  VisualDiffViewer.tsx  WidgetTree.tsx
web/src/store/: appStore.ts
web/src/types/: index.ts
